# minic

./: .gitignore  Cargo.toml  grammar.ebnf
src/: asm.rs  ast.rs  debug_info.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty_print.rs  resolver.rs  semantic_analyzer.rs  source_file.rs  symbol.rs  tacky.rs  with_token.rs
src/asm/: asm_gen.rs  asm_tests.rs
src/ast/: expr.rs  folder.rs  stmt.rs
src/lexer/: lexer_error.rs  token.rs
src/parser/: parser_error.rs  parser_tests.rs  tests.rs
src/parser/snapshots/: minic__parser__parser_tests__binary_expr_prec_105.snap  minic__parser__parser_tests__fn_different_name.snap  minic__parser__parser_tests__parser_no_return.snap  minic__parser__parser_tests__parser_return_n.snap  minic__parser__parser_tests__parser_simple_fn.snap  minic__parser__parser_tests__test_binary_expr__binary_expr_prec_100.snap  minic__parser__parser_tests__test_binary_expr__binary_expr_prec_105.snap  minic__parser__parser_tests__test_binary_expr__binary_expr_prec_95.snap  minic__parser__parser_tests__test_binary_expr__binary_mix.snap  minic__parser__parser_tests__test_binary_expr__bitwise_and.snap  minic__parser__parser_tests__test_binary_expr__bitwise_mix.snap  minic__parser__parser_tests__unary_expr.snap  (+7 more)
src/resolver/: resolver_error.rs  var_map.rs
src/tacky/: tacky_gen.rs  tacky_tests.rs
tests/: generate_tests.py  test_binary_arithmetic.rs  test_binary_comparison.rs  test_binary_logical.rs  test_return.rs  test_unary.rs
tests/files/: test_binary_arithmetic.c  test_binary_comparison.c  test_binary_logical.c  test_return.c  test_unary.c
(+11 files in other folders)
