[package]
name = "minic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = { version = "1.46.1", features = ["yaml"] }

